# parsimon-eval

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  run.sh  run_rm.sh  text1  text2
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
expts/fig_7/: Cargo.toml
expts/fig_7/analysis/: analysis.ipynb  banner.ipynb  gen_path_to_flowid_map.py  link-loads.ipynb  main_large_scale.ipynb  main_large_scale_check.ipynb  max-link.ipynb  stats.ipynb  util.py
expts/fig_7/spec/: 0.mix.json  0_config.mix_b_03_5.json  0_config.mix_b_05_10.json  0_config.mix_b_05_5.json  1.mix.json  10.mix.json  1_config.mix_b_05_5.json  2.mix.json  2_config.mix_b_07_10.json  2_config.mix_b_07_5.json  3.mix.json  4.mix.json  5.mix.json  5_config.mix_b_03_10.json  6.mix.json  7.mix.json  8.mix.json  9.mix.json
expts/fig_7/src/: experiment.rs  lib.rs  main.rs  mix.rs  mlsys.rs  ns3.rs
expts/fig_8/: Cargo.toml
expts/fig_8/analysis/: analysis_counterfactual.ipynb  analysis_dctcp.csv  analysis_dctcp.ipynb  analysis_dctcp_time.npy  busy_period.ipynb  busy_period.py  config_gen_mlsys-new_e201_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e201_p500_l100_t10_nosamp.npz  config_gen_mlsys-new_e201_p500_l100_t1_nosamp.npz  config_gen_mlsys-new_e201_p500_l100_t5_nosamp.npz  config_gen_mlsys-new_e271_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e271_p500_l100_t10_nosamp.npz  config_gen_mlsys-new_e271_p500_l100_t1_nosamp.npz  config_gen_mlsys-new_e271_p500_l100_t5_nosamp.npz  config_gen_mlsys-new_e271_var_p500_l1000_t0_nosamp.npz  config_gen_mlsys-new_e271_var_p500_l1000_t10_nosamp.npz  config_gen_mlsys-new_e271_var_p500_l1000_t1_nosamp.npz  config_gen_mlsys-new_e271_var_p500_l1000_t5_nosamp.npz  config_gen_mlsys-new_e397_s1_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e397_s1_p500_l100_t10_nosamp.npz  config_gen_mlsys-new_e397_s1_p500_l100_t1_nosamp.npz  config_gen_mlsys-new_e397_s1_p500_l100_t5_nosamp.npz  config_gen_mlsys-new_e397_s2_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e397_s2_p500_l100_t10_nosamp.npz  config_gen_mlsys-new_e397_s2_p500_l100_t1_nosamp.npz  config_gen_mlsys-new_e397_s2_p500_l100_t5_nosamp.npz  config_gen_mlsys-new_e426_s1_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e426_s1_p500_l100_t10_nosamp.npz  config_gen_mlsys-new_e426_s1_p500_l100_t5_nosamp.npz  config_gen_mlsys-new_e426_s2_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e426_s2_p500_l100_t10_nosamp.npz  config_gen_mlsys-new_e426_s2_p500_l100_t1_nosamp.npz  config_gen_mlsys-new_e426_s2_p500_l100_t5_nosamp.npz  config_gen_mlsys-new_e466_s1_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e466_s1_p500_l100_t10_nosamp.npz  config_gen_mlsys-new_e466_s1_p500_l100_t1_nosamp.npz  config_gen_mlsys-new_e466_s1_p500_l100_t5_nosamp.npz  config_gen_mlsys-new_e466_s2_p500_l100_t0_nosamp.npz  config_gen_mlsys-new_e466_s2_p500_l100_t1_nosamp.npz  config_gen_mlsys-new_e466_s2_p500_l100_t5_nosamp.npz  (+363 more)
expts/fig_8/spec/: 0.mix.json  0_config.mix.json  1.mix.json  146.mix.json  15_config.mix.json  164.mix.json  16_config.mix.json  1_config.mix.json  2.mix.json  23.mix.json  25.mix.json  3.mix.json  31.mix.json  3_config.mix.json  4.mix.json  5.mix.json  53.mix.json  53_config.mix.json  5_config.mix.json  63.mix.json  6_config.mix.json  72_config.mix.json  all.mix.json  all_config.mix.json  all_config.mixspace.json  all_config_1.mix.json  all_config_1.mix_0.json  all_config_1.mix_1.json  all_config_1.mix_timely.json  all_config_1_dctcp.mix.json  all_config_1_timely.mix.json  all_config_2.mix.json  all_config_2.mix_0.json  all_config_2.mix_1.json  all_config_dctcp_2.mix.json  all_counterfactual.mixspace_dctcp.json  all_counterfactual.mixspace_hpcc.json  all_counterfactual_dctcp.mix.json  all_counterfactual_dctcp.mix_3.json  all_counterfactual_dctcp.mix_4.json  (+109 more)
expts/fig_8/spec_m/: all.mixspace.json  all_config.mix.json  all_config.mixspace.json  gen_spec.py
expts/fig_8/src/: experiment.rs  flowsim.rs  lib.rs  main.rs  main_flowsim_mmf.py  mix.rs  mlsys.rs  ns3.rs  ns3link.rs  text1  text2
expts/large-distributed/: Cargo.toml  Dockerfile  Dockerfile.worker  entrypoint.sh  ips.txt  run.sh  test.txt
expts/large-distributed/scripts/: upsample.py
expts/large-distributed/spec/: .gitignore  mix.json  topology.dhall  topology_small.dhall
expts/large-distributed/src/: experiment.rs  lib.rs  main.rs  mix.rs
workload/: Cargo.toml
workload/distributions/facebook/: cachefollower-all-extract.csv  cachefollower-all.txt  hadoop-all-extract.csv  hadoop-all.txt  hadoop-intracluster-extract.csv  hadoop-intracluster.txt  hadoop-intrarack-extract.csv  hadoop-intrarack.txt  webserver-all-extract.csv  webserver-all.txt
workload/distributions/synthetic/: sync-all-0.txt  sync-all-1.txt  sync-all-10.txt  sync-all-100.txt  sync-all-1000.txt  sync-all-1001.txt  sync-all-1002.txt  sync-all-1003.txt  sync-all-1004.txt  sync-all-1005.txt  sync-all-1006.txt  sync-all-1007.txt  sync-all-1008.txt  sync-all-1009.txt  sync-all-101.txt  sync-all-1010.txt  sync-all-1011.txt  sync-all-1012.txt  sync-all-1013.txt  sync-all-1014.txt  sync-all-1015.txt  sync-all-1016.txt  sync-all-1017.txt  sync-all-1018.txt  sync-all-1019.txt  (+1975 more)
workload/spatials/: cluster_a.json  cluster_a_2_16.json  cluster_a_2_4.json  cluster_a_2_8.json  cluster_a_4_16.json  cluster_a_4_4.json  cluster_b.json  cluster_b_2_16.json  cluster_b_2_4.json  cluster_b_2_8.json  cluster_b_4_16.json  cluster_b_4_4.json  cluster_b_8_16.json  cluster_c.json  cluster_c_2_16.json  cluster_c_2_4.json  cluster_c_2_8.json  cluster_c_4_16.json  cluster_c_4_4.json  cluster_c_8_16.json  cluster_d_2_16.json  cluster_d_2_8.json  cluster_d_4_16.json  cluster_d_4_4.json
workload/src/: entry.rs  fabric.rs  flowgen.rs  lib.rs  spatial.rs  testing.rs
workload/tmp/: topology.dhall  topology.json
workload/topologies/: cluster_b.dhall  cluster_b.json  cluster_b_2_to_1.dhall  cluster_b_2_to_1.json  cluster_b_2_to_1_12k.dhall  cluster_b_2_to_1_12k.json  cluster_b_2_to_1_24k.dhall  cluster_b_2_to_1_36k.dhall  cluster_b_2_to_1_48k.dhall  cluster_b_2_to_1_60k.dhall  cluster_b_2_to_1_m4.json  cluster_b_m4.json
(+515 files in other folders)
