[workspace]
members = ["workload", "crates/utils", "expts/large-distributed"]

[workspace.dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive", "suggestions"] }
csv = "1.2.1"
derive-new = "0.5.9"
itertools = "0.10.5"
# parsimon = { git = "https://github.com/netiken/parsimon.git", branch = "logging" }
parsimon = { path = "../parsimon/crates/parsimon" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
rustc-hash = "1.1.0"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
