[workspace]
members = ["workload", "crates/utils", "expts/fig_7", "expts/fig_8"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "suggestions"] }
csv = "1.3.0"
derive-new = "0.6.0"
itertools = "0.12.1"
parsimon = { git = "https://github.com/netiken/parsimon.git", branch = "main" }
ns3-frontend = { git = "https://github.com/netiken/parsimon.git", branch = "main", package = "ns3-frontend" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
rustc-hash = "1.1.0"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
