[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ordered-float = "3.1.0"
parsimon = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
